--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>zhibing_springmvc</groupId>
-  <artifactId>zhibing_springmvc</artifactId>
-  <version>0.0.1</version>
+  <groupId>com.zhiche</groupId>
+  <artifactId>car_publish</artifactId>
+  <version>1.0.1</version>
   <packaging>war</packaging>
-  <name>zhibing_springmvc</name>
+  <name>car_publish</name>
   
    	<!-- Maven official repository -->
 	<repositories>
@@ -34,7 +34,7 @@
 	<properties>
 		<!-- Encoding -->
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<jdk.version>1.6</jdk.version>
+		<jdk.version>1.7</jdk.version>
 		
 		<spring.version>3.2.8.RELEASE</spring.version>
 		<hibernate.version>4.2.11.Final</hibernate.version>
@@ -242,7 +242,7 @@
 			</plugin>
 		</plugins>
 		
-		<finalName>zhibing_springmvc</finalName>
+		<finalName>car_publish</finalName>
 	</build>
 	
 </project>
