--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,7 +5,7 @@ jdbc_url=jdbc:mysql://127.1.1.1:3306/publish?characterEncoding=utf8
 jdbc_username=root
 jdbc_password=
 
-hibernate.hbm2ddl.auto=update
+hibernate.hbm2ddl.auto=none
 hibernate.show_sql=true
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
