--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
   <display-name>car_publish</display-name>
   <context-param>
     <param-name>contextConfigLocation</param-name>
-    <param-value>classpath:spring.xml,classpath:spring-hibernate.xml</param-value>
+    <param-value>classpath*:spring-*.xml</param-value>
   </context-param>
   <filter>
     <filter-name>openSessionInViewFilter</filter-name>
