--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -6,7 +6,7 @@ jdbc_username=root
 jdbc_password=
 
 hibernate.hbm2ddl.auto=none
-hibernate.show_sql=true
+hibernate.show_sql=false
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
 
