--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,11 +1,11 @@
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 driverClassName=com.mysql.jdbc.Driver
 validationQuery=SELECT 1 
-jdbc_url=jdbc:mysql://127.1.1.1:3306/publish?characterEncoding=utf8
+jdbc_url=jdbc:mysql://127.1.1.1:3306/my_test?characterEncoding=utf8
 jdbc_username=root
-jdbc_password=
+jdbc_password=root
 
-hibernate.hbm2ddl.auto=none
+hibernate.hbm2ddl.auto=update
 hibernate.show_sql=true
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
