--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -137,6 +137,6 @@
     <location>/error/500.jsp</location>
   </error-page>
   <welcome-file-list>
-    <welcome-file>/index1.jsp</welcome-file>
+    <welcome-file>/index.jsp</welcome-file>
   </welcome-file-list>
 </web-app>
